force-app/main/default/objects/Coverage_Plan__c/Coverage_Plan__c.object-meta.xml
<CustomObject>
    <label>Coverage Plan</label>
    <nameField>
        <label>Coverage Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coverage Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>