force-app/main/default/objects/Coverage_Plan__c/fields/Annual_Rate__c.field-meta.xml
<CustomField>
    <fullName>Annual_Rate__c</fullName>
    <label>Annual Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>