force-app/main/default/objects/Coverage_Plan__c/fields/Coverage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Limit__c</fullName>
    <label>Coverage Limit</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>