force-app/main/default/objects/Coverage_Plan__c/fields/Monthly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rate__c</fullName>
    <label>Monthly Rate</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>