force-app/main/default/objects/Coverage_Plan__c/fields/Perk__c.field-meta.xml
<CustomField>
    <fullName>Perk__c</fullName>
    <label>Perk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>