force-app/main/default/objects/Coverage_Plan__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Texas</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Georgia</fullName>
            </value>
            <value>
                <fullName>Arizona</fullName>
            </value>
            <value>
                <fullName>Washington</fullName>
            </value>
            <value>
                <fullName>Ohio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>