force-app/main/default/objects/Coverage_Plan__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Sedan</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Hatchback</fullName>
            </value>
            <value>
                <fullName>Van</fullName>
            </value>
            <value>
                <fullName>Coupe</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
            <value>
                <fullName>Convertible</fullName>
            </value>
            <value>
                <fullName>Motorcycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>